--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,13 +14,23 @@ env:
 jobs:
   releases:
     if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
 
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.19
+
     - name: Build Binaries
       run: |
-        make kubecfg
+        GOOS=linux GOARCH=amd64 BUILDPATH=./bin/kubecfg-linux-amd64 make
+        GOOS=linux GOARCH=arm BUILDPATH=./bin/kubecfg-linux-arm make
+        GOOS=linux GOARCH=arm64 BUILDPATH=./bin/kubecfg-linux-arm64 make
+        GOOS=windows GOARCH=amd64 BUILDPATH=./bin/kubecfg-windows-amd64.exe make
+        GOOS=darwin GOARCH=amd64 BUILDPATH=./bin/kubecfg-darwin-amd64 make
+        GOOS=darwin GOARCH=arm64 BUILDPATH=./bin/kubecfg-darwin-arm64 make
 
     - name: Create Release
       uses: actions/create-release@v1
@@ -33,12 +43,62 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ github.token }}
 
-    - name: Upload kubecfg binary
+    - name: Upload Binary linux-amd64
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./bin/kubecfg
-        asset_name: kubecfg
+        asset_path: ./bin/kubecfg-linux-amd64
+        asset_name: kubecfg-linux-amd64
+        asset_content_type: application/zip
+
+    - name: Upload Binary linux-arm
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./bin/kubecfg-linux-arm
+        asset_name: kubecfg-linux-arm
+        asset_content_type: application/zip
+
+    - name: Upload Binary linux-arm64
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./bin/kubecfg-linux-arm64
+        asset_name: kubecfg-linux-arm64
+        asset_content_type: application/zip
+
+    - name: Upload Binary windows-amd64
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./bin/kubecfg-windows-amd64.exe
+        asset_name: kubecfg-windows-amd64.exe
+        asset_content_type: application/zip
+
+    - name: Upload Binary darwin-amd64
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./bin/kubecfg-darwin-amd64
+        asset_name: kubecfg-darwin-amd64
+        asset_content_type: application/zip
+
+    - name: Upload Binary darwin-arm64
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./bin/kubecfg-darwin-arm64
+        asset_name: kubecfg-darwin-arm64
         asset_content_type: application/zip
